# project-athena

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.md  enhancement.md  setup.md
.streamlit/: config.dev.toml  config.prod.toml
backend/: config.py  exceptions.py  main.py
backend/candidate_comparison_tool/: exceptions.py  prompts.py  router.py  schemas.py  service.py
backend/core/: constants.py  exceptions.py  gemini.py  llm.py  schemas.py  utils.py
backend/email_generator/: prompts.py  router.py  schemas.py  service.py
backend/interview_questions/: exceptions.py  prompts.py  router.py  schemas.py  service.py
backend/job_descriptions/: constants.py  exceptions.py  prompts.py  router.py  schemas.py  service.py  utils.py  validator.py
backend/resume_evaluations/: constants.py  exceptions.py  prompts.py  router.py  schemas.py  service.py
frontend/: Home.py  __init__.py  utils.py
frontend/components/: __init__.py  header.py  scorecard.py
frontend/pages/: Job_Description.py  Resume_Evaluation.py  email_generator.py
frontend/services/: resume_service.py
frontend/static/css/: styles.css
project-athena-develop-2/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md
project-athena-develop-2/.github/ISSUE_TEMPLATE/: chore.md  docs.md  feature.md  test.md
project-athena-develop-2/.streamlit/: config.dev.toml
project-athena-develop-2/backend/: config.py
project-athena-develop-2/backend/email_generator/: app.py  prompts.py  router.py  (+2 more)
project-athena-develop-2/docs/: PRD.md
scripts/: validate-branch-name.sh
scripts/hooks/: pre-merge-commit
temp_backup/: router.py
(+3 files in other folders)
